lei20_21_s4_2dk_03/base.core/src/main/java/eapli/base/gramaticas/script/Compilacao_Scripts/LinguagemScriptParser.java
package eapli.base.gramaticas.script.Compilacao_Scripts;

import java.lang.*;

import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import java.util.List;

import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

/**
 * The type Linguagem script parser.
 */
@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LinguagemScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	/**
	 * The constant _decisionToDFA.
	 */
	protected static final DFA[] _decisionToDFA;
	/**
	 * The constant _sharedContextCache.
	 */
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	/**
	 * The constant T__0.
	 */
	public static final int
		T__0=1, /**
	 * The T __ 1.
	 */
	T__1=2, /**
	 * The T __ 2.
	 */
	T__2=3, /**
	 * The T __ 3.
	 */
	T__3=4, /**
	 * The T __ 4.
	 */
	T__4=5, /**
	 * The T __ 5.
	 */
	T__5=6, /**
	 * The T __ 6.
	 */
	T__6=7, /**
	 * The Modificador.
	 */
	MODIFICADOR=8,
	/**
	 * The Tipo.
	 */
	TIPO=9, /**
	 * The Letra.
	 */
	LETRA=10, /**
	 * The Digito.
	 */
	DIGITO=11, /**
	 * The Newline.
	 */
	NEWLINE=12, /**
	 * The Aspas.
	 */
	ASPAS=13, /**
	 * The Pelica.
	 */
	PELICA=14, /**
	 * The Expo.
	 */
	EXPO=15,
	/**
	 * The Igual.
	 */
	IGUAL=16, /**
	 * The Igual espaco.
	 */
	IGUAL_ESPACO=17, /**
	 * The Virgula.
	 */
	VIRGULA=18, /**
	 * The Ponto final.
	 */
	PONTO_FINAL=19, /**
	 * The Fim instrucao.
	 */
	FIM_INSTRUCAO=20,
	/**
	 * The Vazio.
	 */
	VAZIO=21, /**
	 * The Dois pontos.
	 */
	DOIS_PONTOS=22, /**
	 * The Soma.
	 */
	SOMA=23, /**
	 * The Subtracao.
	 */
	SUBTRACAO=24, /**
	 * The Multiplicacao.
	 */
	MULTIPLICACAO=25, /**
	 * The Divisao.
	 */
	DIVISAO=26,
	/**
	 * The If.
	 */
	IF=27, /**
	 * The Else.
	 */
	ELSE=28, /**
	 * The Then.
	 */
	THEN=29, /**
	 * The Endif.
	 */
	ENDIF=30, /**
	 * The Maior.
	 */
	MAIOR=31, /**
	 * The Menor.
	 */
	MENOR=32, /**
	 * The Menor igual.
	 */
	MENOR_IGUAL=33,
	/**
	 * The Maior igual.
	 */
	MAIOR_IGUAL=34, /**
	 * The Diferente.
	 */
	DIFERENTE=35, /**
	 * The For.
	 */
	FOR=36, /**
	 * The Endfor.
	 */
	ENDFOR=37, /**
	 * The Colecao.
	 */
	COLECAO=38, /**
	 * The Ler ficheiro.
	 */
	LER_FICHEIRO=39,
	/**
	 * The Extensao.
	 */
	EXTENSAO=40, /**
	 * The Email.
	 */
	EMAIL=41;
	/**
	 * The constant RULE_start.
	 */
	public static final int
		RULE_start = 0, /**
	 * The Rule expr.
	 */
	RULE_expr = 1, /**
	 * The Rule declaracoes.
	 */
	RULE_declaracoes = 2, /**
	 * The Rule declaracao.
	 */
	RULE_declaracao = 3,
	/**
	 * The Rule tipo.
	 */
	RULE_tipo = 4, /**
	 * The Rule lista de variaveis.
	 */
	RULE_lista_de_variaveis = 5, /**
	 * The Rule variavel.
	 */
	RULE_variavel = 6, /**
	 * The Rule identificador.
	 */
	RULE_identificador = 7,
	/**
	 * The Rule valor.
	 */
	RULE_valor = 8, /**
	 * The Rule string.
	 */
	RULE_string = 9, /**
	 * The Rule numeros.
	 */
	RULE_numeros = 10, /**
	 * The Rule palavra.
	 */
	RULE_palavra = 11,
	/**
	 * The Rule inteiro.
	 */
	RULE_inteiro = 12, /**
	 * The Rule real.
	 */
	RULE_real = 13, /**
	 * The Rule caractere.
	 */
	RULE_caractere = 14, /**
	 * The Rule alfa.
	 */
	RULE_alfa = 15,
	/**
	 * The Rule alfas.
	 */
	RULE_alfas = 16, /**
	 * The Rule potencia.
	 */
	RULE_potencia = 17, /**
	 * The Rule base.
	 */
	RULE_base = 18, /**
	 * The Rule expoente.
	 */
	RULE_expoente = 19,
	/**
	 * The Rule contas.
	 */
	RULE_contas = 20, /**
	 * The Rule variavel conta.
	 */
	RULE_variavel_conta = 21, /**
	 * The Rule conta.
	 */
	RULE_conta = 22, /**
	 * The Rule alternativa.
	 */
	RULE_alternativa = 23,
	/**
	 * The Rule parenteses.
	 */
	RULE_parenteses = 24, /**
	 * The Rule a.
	 */
	RULE_a = 25, /**
	 * The Rule comparador.
	 */
	RULE_comparador = 26, /**
	 * The Rule ciclo.
	 */
	RULE_ciclo = 27,
	/**
	 * The Rule forloop.
	 */
	RULE_forloop = 28, /**
	 * The Rule condicao andamento.
	 */
	RULE_condicao_andamento = 29, /**
	 * The Rule for each.
	 */
	RULE_forEach = 30, /**
	 * The Rule funcoes especiais.
	 */
	RULE_funcoesEspeciais = 31,
	/**
	 * The Rule nome ficheiro.
	 */
	RULE_nome_ficheiro = 32, /**
	 * The Rule envio email.
	 */
	RULE_envioEmail = 33, /**
	 * The Rule lista destinatarios.
	 */
	RULE_listaDestinatarios = 34,
	/**
	 * The Rule assunto.
	 */
	RULE_assunto = 35, /**
	 * The Rule mensagem.
	 */
	RULE_mensagem = 36, /**
	 * The Rule palavras.
	 */
	RULE_palavras = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expr", "declaracoes", "declaracao", "tipo", "lista_de_variaveis", 
			"variavel", "identificador", "valor", "string", "numeros", "palavra", 
			"inteiro", "real", "caractere", "alfa", "alfas", "potencia", "base", 
			"expoente", "contas", "variavel_conta", "conta", "alternativa", "parenteses", 
			"a", "comparador", "ciclo", "forloop", "condicao_andamento", "forEach", 
			"funcoesEspeciais", "nome_ficheiro", "envioEmail", "listaDestinatarios", 
			"assunto", "mensagem", "palavras"
		};
	}

	/**
	 * The constant ruleNames.
	 */
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "' : '", "'Assunto: '", "'Mensagem: '", 
			null, null, null, null, "'\n'", "'\"'", "'''", null, "'='", null, "','", 
			"'.'", "';'", "' '", null, null, null, null, null, "'if'", "'else'", 
			"'then'", "'endif'", "'>'", "'<'", "'=<'", "'=>'", "'!='", "'for'", "'endfor'", 
			null, "'lerficheiro'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "MODIFICADOR", "TIPO", 
			"LETRA", "DIGITO", "NEWLINE", "ASPAS", "PELICA", "EXPO", "IGUAL", "IGUAL_ESPACO", 
			"VIRGULA", "PONTO_FINAL", "FIM_INSTRUCAO", "VAZIO", "DOIS_PONTOS", "SOMA", 
			"SUBTRACAO", "MULTIPLICACAO", "DIVISAO", "IF", "ELSE", "THEN", "ENDIF", 
			"MAIOR", "MENOR", "MENOR_IGUAL", "MAIOR_IGUAL", "DIFERENTE", "FOR", "ENDFOR", 
			"COLECAO", "LER_FICHEIRO", "EXTENSAO", "EMAIL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	/**
	 * The constant VOCABULARY.
	 */
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * The constant tokenNames.
	 *
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinguagemScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	/**
	 * Instantiates a new Linguagem script parser.
	 *
	 * @param input the input
	 */
	public LinguagemScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	/**
	 * The type Start context.
	 */
	public static class StartContext extends ParserRuleContext {
		/**
		 * Expr expr context.
		 *
		 * @return the expr context
		 */
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}

		/**
		 * Eof terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode EOF() { return getToken(LinguagemScriptParser.EOF, 0); }

		/**
		 * Newline terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode NEWLINE() { return getToken(LinguagemScriptParser.NEWLINE, 0); }

		/**
		 * Instantiates a new Start context.
		 *
		 * @param parent        the parent
		 * @param invokingState the invoking state
		 */
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemScriptVisitor ) return ((LinguagemScriptVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	/**
	 * Start start context.
	 *
	 * @return the start context
	 * @throws RecognitionException the recognition exception
	 */
	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				expr();
				setState(77);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				expr();
				setState(80);
				match(NEWLINE);
				setState(81);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The type Expr context.
	 */
	public static class ExprContext extends ParserRuleContext {
		/**
		 * Declaracoes declaracoes context.
		 *
		 * @return the declaracoes context
		 */
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}

		/**
		 * Newline terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode NEWLINE() { return getToken(LinguagemScriptParser.NEWLINE, 0); }

		/**
		 * Expr expr context.
		 *
		 * @return the expr context
		 */
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}

		/**
		 * Contas contas context.
		 *
		 * @return the contas context
		 */
		public ContasContext contas() {
			return getRuleContext(ContasContext.class,0);
		}

		/**
		 * Ciclo ciclo context.
		 *
		 * @return the ciclo context
		 */
		public CicloContext ciclo() {
			return getRuleContext(CicloContext.class,0);
		}

		/**
		 * Alternativa alternativa context.
		 *
		 * @return the alternativa context
		 */
		public AlternativaContext alternativa() {
			return getRuleContext(AlternativaContext.class,0);
		}

		/**
		 * Condicao andamento condicao andamento context.
		 *
		 * @return the condicao andamento context
		 */
		public Condicao_andamentoContext condicao_andamento() {
			return getRuleContext(Condicao_andamentoContext.class,0);
		}

		/**
		 * Fim instrucao terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode FIM_INSTRUCAO() { return getToken(LinguagemScriptParser.FIM_INSTRUCAO, 0); }

		/**
		 * Instantiates a new Expr context.
		 *
		 * @param parent        the parent
		 * @param invokingState the invoking state
		 */
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemScriptVisitor ) return ((LinguagemScriptVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	/**
	 * Expr expr context.
	 *
	 * @return the expr context
	 * @throws RecognitionException the recognition exception
	 */
	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				declaracoes();
				setState(86);
				match(NEWLINE);
				setState(87);
				expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				contas();
				setState(90);
				match(NEWLINE);
				setState(91);
				expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				ciclo();
				setState(94);
				match(NEWLINE);
				setState(95);
				expr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				alternativa();
				setState(98);
				match(NEWLINE);
				setState(99);
				expr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				condicao_andamento();
				setState(102);
				match(FIM_INSTRUCAO);
				setState(103);
				match(NEWLINE);
				setState(104);
				expr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(106);
				declaracoes();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(107);
				contas();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(108);
				ciclo();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(109);
				alternativa();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(110);
				condicao_andamento();
				setState(111);
				match(FIM_INSTRUCAO);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The type Declaracoes context.
	 */
	public static class DeclaracoesContext extends ParserRuleContext {
		/**
		 * Declaracao declaracao context.
		 *
		 * @return the declaracao context
		 */
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}

		/**
		 * Declaracoes declaracoes context.
		 *
		 * @return the declaracoes context
		 */
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}

		/**
		 * Instantiates a new Declaracoes context.
		 *
		 * @param parent        the parent
		 * @param invokingState the invoking state
		 */
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).exitDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemScriptVisitor ) return ((LinguagemScriptVisitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	/**
	 * Declaracoes declaracoes context.
	 *
	 * @return the declaracoes context
	 * @throws RecognitionException the recognition exception
	 */
	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracoes);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODIFICADOR:
			case TIPO:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				declaracao();
				setState(116);
				declaracoes();
				}
				break;
			case EOF:
			case NEWLINE:
			case VAZIO:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The type Declaracao context.
	 */
	public static class DeclaracaoContext extends ParserRuleContext {
		/**
		 * Instantiates a new Declaracao context.
		 *
		 * @param parent        the parent
		 * @param invokingState the invoking state
		 */
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }

		/**
		 * Instantiates a new Declaracao context.
		 */
		public DeclaracaoContext() { }

		/**
		 * Copy from.
		 *
		 * @param ctx the ctx
		 */
		public void copyFrom(DeclaracaoContext ctx) {
			super.copyFrom(ctx);
		}
	}

	/**
	 * The type Declaracao variaveis context.
	 */
	public static class DeclaracaoVariaveisContext extends DeclaracaoContext {
		/**
		 * The Left.
		 */
		public TipoContext left;
		/**
		 * The Right.
		 */
		public Lista_de_variaveisContext right;

		/**
		 * Fim instrucao terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode FIM_INSTRUCAO() { return getToken(LinguagemScriptParser.FIM_INSTRUCAO, 0); }

		/**
		 * Tipo tipo context.
		 *
		 * @return the tipo context
		 */
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}

		/**
		 * Lista de variaveis lista de variaveis context.
		 *
		 * @return the lista de variaveis context
		 */
		public Lista_de_variaveisContext lista_de_variaveis() {
			return getRuleContext(Lista_de_variaveisContext.class,0);
		}

		/**
		 * Instantiates a new Declaracao variaveis context.
		 *
		 * @param ctx the ctx
		 */
		public DeclaracaoVariaveisContext(DeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).enterDeclaracaoVariaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).exitDeclaracaoVariaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemScriptVisitor ) return ((LinguagemScriptVisitor<? extends T>)visitor).visitDeclaracaoVariaveis(this);
			else return visitor.visitChildren(this);
		}
	}

	/**
	 * Declaracao declaracao context.
	 *
	 * @return the declaracao context
	 * @throws RecognitionException the recognition exception
	 */
	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao);
		try {
			_localctx = new DeclaracaoVariaveisContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			((DeclaracaoVariaveisContext)_localctx).left = tipo();
			setState(122);
			((DeclaracaoVariaveisContext)_localctx).right = lista_de_variaveis();
			setState(123);
			match(FIM_INSTRUCAO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The type Tipo context.
	 */
	public static class TipoContext extends ParserRuleContext {
		/**
		 * Modificador terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode MODIFICADOR() { return getToken(LinguagemScriptParser.MODIFICADOR, 0); }

		/**
		 * Tipo terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode TIPO() { return getToken(LinguagemScriptParser.TIPO, 0); }

		/**
		 * Instantiates a new Tipo context.
		 *
		 * @param parent        the parent
		 * @param invokingState the invoking state
		 */
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemScriptVisitor ) return ((LinguagemScriptVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	/**
	 * Tipo tipo context.
	 *
	 * @return the tipo context
	 * @throws RecognitionException the recognition exception
	 */
	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODIFICADOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(MODIFICADOR);
				setState(126);
				match(TIPO);
				}
				break;
			case TIPO:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				match(TIPO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The type Lista de variaveis context.
	 */
	public static class Lista_de_variaveisContext extends ParserRuleContext {
		/**
		 * Variavel variavel context.
		 *
		 * @return the variavel context
		 */
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}

		/**
		 * Virgula terminal node.
		 *
		 * @return the terminal node
		 */
		public TerminalNode VIRGULA() { return getToken(LinguagemScriptParser.VIRGULA, 0); }

		/**
		 * Lista de variaveis lista de variaveis context.
		 *
		 * @return the lista de variaveis context
		 */
		public Lista_de_variaveisContext lista_de_variaveis() {
			return getRuleContext(Lista_de_variaveisContext.class,0);
		}

		/**
		 * Instantiates a new Lista de variaveis context.
		 *
		 * @param parent        the parent
		 * @param invokingState the invoking state
		 */
		public Lista_de_variaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_de_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).enterLista_de_variaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemScriptListener ) ((LinguagemScriptListener)listener).exitLista_de_variaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemScriptVisitor ) return ((LinguagemScriptVisitor<? extends T>)visitor).visitLista_de_variaveis(this);
			else return visitor.visitChildren(this);
		}
	}
